--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "CalamityAdam",
   "license": "ISC",
   "dependencies": {
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
